# ai-test

./: .gitignore  CMakeLists.txt  README.md  README_QUERY.md  emulate.py  example_query.py  query_solution.py  solver.py  test_solver.py
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  battle_server  cmake_install.cmake  compile_commands.json  test_game  test_message
frontend/: index.html
server/include/: game.hpp  message.hpp  player.hpp  room.hpp  server.hpp  session.hpp
server/src/: game.cpp  main.cpp  room.cpp  server.cpp  session.cpp  test_game.cpp  test_message.cpp
